# bevy_midix

./: CHANGELOG.md  Cargo.toml
examples/: input.rs  input_with_synth.rs  sf2_scale.rs
src/: data.rs  lib.rs
src/assets/: asset.rs  mod.rs  sound_font.rs
src/assets/song/: mod.rs  song_writer.rs
src/assets/song/builder/: channel.rs  mod.rs
src/assets/song/simple/: beat.rs  channel_settings.rs  mod.rs  section.rs
src/input/: connection.rs  data.rs  error.rs  mod.rs  plugin.rs  settings.rs
src/input/state/: connection.rs  mod.rs
src/synth/: mod.rs  player_and_commands.rs
src/synth/node/: channel_node.rs  mod.rs  plugin.rs
