[package]
name = "bevy_midix"
version = "4.0.0-alpha.0"
authors = ["dsgallups <dsgallups@protonmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dsgallups/midix"
documentation = "https://docs.rs/bevy_midix"
description = "The MIDI plugin for humans. Out-of-the-box soundfont synthesizer, commands, and input!"
keywords = ["gamedev", "bevy", "midi", "encoding", "control"]
categories = ["game-development", "game-engines", "encoding"]
exclude = ["assets/*"]

[features]
serde = ["dep:serde", "midix/serde"]
std = ["thiserror/std"]
assets = ["midix/bevy_asset"]
synth = ["midix_synth", "dep:bevy_seedling", "dep:firewheel", "assets"]
web = []

[dependencies]
midir = "0.10"
midix = { version = "4.0.0-alpha.1", features = ["bevy"] }
midix_synth = { version = "0.1.0-alpha.0", optional = true }
thiserror = {version = "2.0", default-features = false }
trotcast = "0.3.0"
serde = { version = "1.0", features = ["derive"], optional = true }
bevy_seedling = { git = "https://github.com/dsgallups/bevy_seedling.git", branch = "dsgallups/register-fx", features = [
    "mp3",
], optional = true }
firewheel = { version = "0.8.0-rc.1", optional = true }

# midir = "0.10"
# crossbeam-channel = "0.5.15"
# midix = { version = "4.0.0-alpha", features = [
#     "bevy",
#     "std",
# ], path = "../midix" }
# midix_synth = { version = "0.1.0-alpha", path = "../midix_synth" }
# thiserror = "2.0"
# tinyaudio = "1.1.0"
# itertools = "0.14.0"
# fnv = "1.0.7"

[dependencies.bevy]
version = "0.17.0-rc"
default-features = false
features = ["bevy_log"]
# features = [
#     "multi_threaded",
#     "bevy_asset",
#     "async_executor",
#     "bevy_log",
#     "bevy_state",
#     "std",
# ]

[dev-dependencies]
pretty_assertions = "1.4.1"

#[dev-dependencies.bevy]
# version = "0.16.0-rc.5"
# default-features = true
